2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-chio.pl.in: Typo.

2007-02-21  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Remove match for path_on_disk_slash.

2007-02-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Set splitsize to 0 if no data in file.
	* server-src/amflush.c: Don't send FLUSH request if no data in file.
	* server-src/planner.c: Don't send FLUSH request if no data in file.
	* server-src/driver.c: Don't send request to taper if no data in file.

2007-02-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amverify.sh.in: Remove bogus fi.

2007-02-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amverify.sh.in: Add timeout on wait for device ready.
	* changer-src/chg-chio.pl.in: Wait (with timeout) for drive ready.

2007-02-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Don't call free_server_config.

2007-02-15  Jean-Louis Martineau <martineau@zmanda.com>
	* patching file oldrecover-src/amrecover.h (local_cd): Prototype.
	* oldrecover-src/set_commands.c: Works with quoted arguments.
	* oldrecover-src/uparse.y (LCD): Call local_cd.
	* recover-src/amrecover.h (local_cd): Prototype.
	* recover-src/set_commands.c: Works with quoted arguments.
	* recover-src/uparse.y (LCD): Call local_cd.

2007-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: fix for chunk and displayunit.

2007-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Fix if krb4 is compiled but another auth is
			       used.

2007-02-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am (STANDARD_COMMON_STUFF_NOT_FILE): Add sl.
	* common-src/statfs.c: Fix scale function.

2007-02-12  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Fix PARAM_HONOR_NODUMP.

2007-02-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Fix postscript crash.
