@@ -1,4 +1,7 @@
 2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/debug.c: Remove old file in current directory.
+
+2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>
 	* changer-src/chg-chio.pl.in: Typo.
 
 2007-02-21  Jean-Louis Martineau <martineau@zmanda.com>
